Added controllers and new views to CompFactory